Some modif to same stuff

--- a/LFA Project/001_C_Mean_Clustering.ipynb
+++ b/LFA Project/001_C_Mean_Clustering.ipynb
@@ -3376,7 +3376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 151,
    "metadata": {
     "scrolled": false
    },
@@ -3390,75 +3390,88 @@
       " [0.5326087  0.4673913 ]]\n",
       "Len remaining data 265\n",
       "cluster ok  []\n",
-      "[[0.64       0.36      ]\n",
-      " [0.30434783 0.69565217]\n",
+      "[[0.30434783 0.69565217]\n",
+      " [0.64       0.36      ]\n",
       " [0.77083333 0.22916667]]\n",
       "Len remaining data 265\n",
-      "cluster ok  []\n",
-      "[[0.85365854 0.14634146]\n",
-      " [0.27272727 0.72727273]\n",
-      " [0.54651163 0.45348837]\n",
-      " [0.77083333 0.22916667]]\n",
-      "Len remaining data 265\n",
-      "cluster ok  [0, 4]\n",
+      "cluster ok  [0, 1]\n",
       "[[0.07142857 0.92857143]\n",
-      " [0.77083333 0.22916667]\n",
-      " [0.27272727 0.72727273]\n",
-      " [0.85365854 0.14634146]\n",
-      " [1.         0.        ]]\n",
-      "Len remaining data 265\n",
-      "fhvs_ 12.495021794712939\n",
-      "pc_s 0.9471061431643607\n",
-      "xb_s 0.024713189319196846\n",
-      "Good cluster : 0\n",
-      "Good cluster : 4\n",
-      "cluster ok  []\n",
-      "[[0.27272727 0.72727273]\n",
-      " [0.77083333 0.22916667]\n",
-      " [0.85714286 0.14285714]]\n",
-      "Len remaining data 164\n",
-      "cluster ok  [2]\n",
-      "[[0.77083333 0.22916667]\n",
-      " [0.85365854 0.14634146]\n",
       " [1.         0.        ]\n",
-      " [0.27272727 0.72727273]]\n",
-      "Len remaining data 164\n",
-      "fhvs_ 45.727050213140906\n",
-      "pc_s 0.9434875643292187\n",
-      "xb_s 0.013515144276245606\n",
-      "Good cluster : 2\n",
-      "cluster ok  []\n",
-      "[[0.54216867 0.45783133]\n",
-      " [0.78       0.22      ]]\n",
-      "Len remaining data 161\n",
-      "cluster ok  []\n",
-      "[[0.27272727 0.72727273]\n",
-      " [0.77083333 0.22916667]\n",
-      " [0.85365854 0.14634146]]\n",
-      "Len remaining data 161\n",
-      "cluster ok  [0]\n",
-      "[[1.         0.        ]\n",
-      " [0.85365854 0.14634146]\n",
-      " [0.23809524 0.76190476]\n",
-      " [0.76086957 0.23913043]]\n",
-      "Len remaining data 161\n",
-      "fhvs_ 25.830750177111472\n",
-      "pc_s 0.9513178645012027\n",
-      "xb_s 0.020753540024113948\n",
-      "Good cluster : 0\n"
+      " [0.78       0.22      ]\n",
+      " [0.54216867 0.45783133]]\n",
+      "Len remaining data 265\n",
+      "fhvs_ 51.15884364664457\n",
+      "pc_s 0.7735201876403692\n",
+      "xb_s 0.2218407757798643\n",
+      "Good cluster : 0\n",
+      "0\n",
+      "3\n",
+      "[[ 5.06076328 14.3358351   1.        ]\n",
+      " [ 3.98603573 13.74417788  1.        ]\n",
+      " [ 4.53096497 14.15616054  0.        ]\n",
+      " [ 4.11930384 13.51822252  2.        ]\n",
+      " [ 4.45688333 14.8128526   2.        ]\n",
+      " [ 5.09650413 13.72794272  2.        ]\n",
+      " [ 5.02432825 15.26847229  2.        ]\n",
+      " [ 5.51347797 15.28857406  2.        ]\n",
+      " [ 4.97369682 15.09224362  0.        ]\n",
+      " [ 4.2229307  13.44592656  2.        ]\n",
+      " [ 3.3808389  12.05261877  2.        ]\n",
+      " [ 4.99708648 15.50678543  2.        ]\n",
+      " [ 4.43797694 13.54898393  2.        ]\n",
+      " [ 4.20121351 14.09723784  2.        ]\n",
+      " [ 4.73377314 13.70246406  0.        ]\n",
+      " [ 4.61846925 13.70766668  2.        ]\n",
+      " [ 4.66334318 14.71131801  0.        ]\n",
+      " [ 5.01441197 14.0208332   2.        ]\n",
+      " [ 5.97969822 16.50560135  0.        ]\n",
+      " [ 5.11277779 14.08270293  2.        ]\n",
+      " [ 4.12576606 11.3771488   0.        ]\n",
+      " [ 5.17484403 14.00984867  2.        ]\n",
+      " [ 4.55726593 14.11401543  2.        ]\n",
+      " [ 4.46964508 13.65513228  2.        ]\n",
+      " [ 4.80027017 14.60491722  2.        ]\n",
+      " [ 4.59262313 14.79487716  2.        ]\n",
+      " [ 5.22973406 13.73622553  2.        ]\n",
+      " [ 4.39978555 15.31150077  2.        ]\n",
+      " [ 4.44604822 15.12639822  0.        ]\n",
+      " [ 4.36672018 12.68844517  2.        ]\n",
+      " [ 4.30578098 14.57061085  2.        ]\n",
+      " [ 5.26097007 14.11056765  2.        ]\n",
+      " [ 4.36806576 14.45868936  2.        ]\n",
+      " [ 4.68546329 15.02586287  2.        ]\n",
+      " [ 5.59764418 15.42385393  2.        ]\n",
+      " [ 4.25274977 14.71347812  2.        ]\n",
+      " [ 4.60996632 15.70957605  2.        ]\n",
+      " [ 5.17811836 12.37851877  0.        ]\n",
+      " [ 4.66443005 14.91011395  2.        ]\n",
+      " [ 4.66067742 14.44794501  2.        ]\n",
+      " [ 4.601616   15.73243421  2.        ]\n",
+      " [ 4.70761457 14.97224966  2.        ]\n",
+      " [ 5.0672863  14.86076458  2.        ]\n",
+      " [ 4.86804622 14.78637113  2.        ]\n",
+      " [ 4.85799623 13.869845    2.        ]\n",
+      " [ 4.39492784 13.60478809  0.        ]\n",
+      " [ 4.50086947 13.09072084  2.        ]\n",
+      " [ 4.27243533 14.20765414  2.        ]\n",
+      " [ 5.14366829 14.00223905  2.        ]\n",
+      " [ 4.28241099 14.04977298  2.        ]\n",
+      " [ 4.45185762 12.72171681  1.        ]]\n",
+      "Good cluster : 1\n",
+      "3\n",
+      "3\n"
      ]
     },
     {
      "ename": "ValueError",
-     "evalue": "max() arg is an empty sequence",
+     "evalue": "all the input arrays must have same number of dimensions",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-136-043220659ceb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     83\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcenters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 85\u001b[0;31m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcenters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclusterize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     86\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetClass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[0;31m#labels, centers, mb = fuzzyCMeansClustering(dataset, k=2)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-136-043220659ceb>\u001b[0m in \u001b[0;36mclusterize\u001b[0;34m(dataset)\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0mmb_t\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m         \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetClusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmb_t\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m         \u001b[0;31m# First, check supervised values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0;31m# TOFIX : Bordel with cluster indexes, won't work.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-136-043220659ceb>\u001b[0m in \u001b[0;36mgetClusters\u001b[0;34m(dataset, membership_mat)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mcluster_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0mmax_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmembership_mat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m         \u001b[0mcluster_labels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mcluster_labels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: max() arg is an empty sequence"
+      "\u001b[0;32m<ipython-input-151-c3062fc871b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     88\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcenters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcenters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclusterize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetClass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;31m#labels, centers, mb = fuzzyCMeansClustering(dataset, k=2)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-151-c3062fc871b1>\u001b[0m in \u001b[0;36mclusterize\u001b[0;34m(dataset)\u001b[0m\n\u001b[1;32m     79\u001b[0m                     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult_labels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m                     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcluster\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m                     \u001b[0mresult_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mresult_labels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfound_clusters\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcluster\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     82\u001b[0m                     \u001b[0mtemp_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdelete\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m                     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: all the input arrays must have same number of dimensions"
      ]
     }
    ],
@@ -3497,10 +3510,11 @@
     "    return cluster_labels, cluster_centers, membership_mat\n",
     "\n",
     "def clusterize(dataset):\n",
-    "    result_labels = []\n",
+    "    result_labels = [np.empty((0, len(dataset[0])), float)]\n",
     "    result_mb     = np.empty((0, len(dataset[0])), float)\n",
     "    result_ctrs   = np.empty((0, len(dataset[0])), float)\n",
     "    temp_data     = copy.copy(dataset)\n",
+    "    found_clusters = 0\n",
     "    c = 2\n",
     "    done = False\n",
     "    while(not done and c < math.sqrt(len(dataset))): \n",
@@ -3540,8 +3554,12 @@
     "            else:\n",
     "                for c in cluster_ok :\n",
     "                    cluster, indices = extractCluster(c, temp_data, labels)\n",
-    "                    result_labels = np.append(result_labels, cluster)\n",
+    "                    print(len(result_labels[0]))\n",
+    "                    print(len(cluster[0]))\n",
+    "                    result_labels = np.concatenate([result_labels[found_clusters], cluster])\n",
     "                    temp_data = np.delete(temp_data, indices, 0)\n",
+    "                    print(result_labels)\n",
+    "                    found_clusters += 1\n",
     "            c = c - len(cluster_ok) + 1\n",
     "            continue\n",
     "            \n",
